--- a/web/index.html
+++ b/web/index.html
@@ -20,13 +20,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="app_public">
+  <meta name="apple-mobile-web-app-title" content="frontend_app_public">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>app_public</title>
+  <title>frontend_app_public</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
